@@ -1,3 +1,7 @@
+shmuel 2024-04-22 18:35:26+03:00 - build 824
+
+1. Refactoring.
+
 shmuel 2024-04-16 14:30:12+03:00 - build 823
 
 1. LuaFAR: add function win.JoinPath.
